# analytics-agent

./: .gitignore  Makefile  README.md  pyproject.toml
analytics_agent/: __init__.py  config.py  container.py
analytics_agent/agent/: __init__.py  core.py  llm_manager.py  state.py
analytics_agent/clients/: __init__.py  bigquery.py
analytics_agent/interface/: __init__.py  cli.py  web.py
analytics_agent/interface/static/: script.js  style.css
analytics_agent/interface/templates/: index.html
analytics_agent/tools/: __init__.py  base.py  bigquery.py  file_export.py  ml_analysis.py  visualization.py
